# IW2.0

./: .gitmodules  README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/zed_nodelets/: ZedConfig.h
devel/lib/pcl-tutorial/: pcl-tutorial
devel/lib/pkgconfig/: pcl-tutorial.pc  rviz_plugin_zed_od.pc  zed-ros-app.pc  zed_ar_track_alvar_example.pc  zed_depth_sub_tutorial.pc  zed_display_rviz.pc  zed_interfaces.pc  zed_multicamera_example.pc  zed_nodelet_example.pc  zed_nodelets.pc  zed_obj_det_sub_tutorial.pc  zed_ros_floor_detection.pc  zed_rtabmap_example.pc  zed_sensors_sub_tutorial.pc  zed_sync_test.pc  zed_tracking_sub_tutorial.pc  zed_video_sub_tutorial.pc  zed_wrapper.pc
devel/lib/zed-ros-app/: zed-ros-app
devel/lib/zed_depth_sub_tutorial/: zed_depth_sub
devel/lib/zed_obj_det_sub_tutorial/: zed_obj_det_sub
devel/lib/zed_ros_floor_detection/: zed_ros_floor_detection
devel/lib/zed_sensors_sub_tutorial/: zed_sensors_sub
devel/lib/zed_tracking_sub_tutorial/: zed_tracking_sub
devel/lib/zed_video_sub_tutorial/: zed_video_sub
devel/lib/zed_wrapper/: zed_wrapper_node
devel/share/pcl-tutorial/cmake/: pcl-tutorialConfig.cmake
devel/share/rviz_plugin_zed_od/cmake/: rviz_plugin_zed_odConfig.cmake
devel/share/zed-ros-app/cmake/: zed-ros-appConfig.cmake
devel/share/zed_ar_track_alvar_example/cmake/: zed_ar_track_alvar_exampleConfig.cmake
devel/share/zed_depth_sub_tutorial/cmake/: zed_depth_sub_tutorialConfig.cmake
devel/share/zed_display_rviz/cmake/: zed_display_rvizConfig.cmake
devel/share/zed_interfaces/cmake/: zed_interfaces-msg-extras.cmake  zed_interfaces-msg-paths.cmake  zed_interfacesConfig.cmake
devel/share/zed_multicamera_example/cmake/: zed_multicamera_exampleConfig.cmake
devel/share/zed_nodelet_example/cmake/: zed_nodelet_exampleConfig.cmake
devel/share/zed_nodelets/cmake/: zed_nodeletsConfig.cmake
devel/share/zed_obj_det_sub_tutorial/cmake/: zed_obj_det_sub_tutorialConfig.cmake
devel/share/zed_ros_floor_detection/cmake/: zed_ros_floor_detectionConfig.cmake
devel/share/zed_rtabmap_example/cmake/: zed_rtabmap_exampleConfig.cmake
devel/share/zed_sensors_sub_tutorial/cmake/: zed_sensors_sub_tutorialConfig.cmake
devel/share/zed_sync_test/cmake/: zed_sync_testConfig.cmake
devel/share/zed_tracking_sub_tutorial/cmake/: zed_tracking_sub_tutorialConfig.cmake
devel/share/zed_video_sub_tutorial/cmake/: zed_video_sub_tutorialConfig.cmake
devel/share/zed_wrapper/cmake/: zed_wrapperConfig.cmake
src/exposure-ctrl/: CMakeLists.txt  package.xml
src/exposure-ctrl/src/: main.cpp
src/lidar-frame/: CMakeLists.txt  package.xml
src/lidar-frame/src/: lidar_frame_node.cpp
src/pcl-tutorial/: CMakeLists.txt
src/pcl-tutorial/src/: example_voxelgrid.cpp
src/plane-segmentation/: CMakeLists.txt  README.md  package.xml
src/plane-segmentation/src/: plane_segmentation_node.cpp
src/pointcloud-slices/: CMakeLists.txt  package.xml
src/pointcloud-slices/src/: main.cpp
src/zed-ros-app/: CMakeLists.txt  package.xml
src/zed-ros-app/include/: headers.hpp
src/zed-ros-app/launch/: zed-ros-app.launch
src/zed-ros-app/rviz/: zed2.rviz
src/zed-ros-app/src/: main.cpp
src/zed-ros-examples/zed_display_rviz/launch/: display_zed2.launch
src/zed-ros-wrapper/zed_wrapper/: CMakeLists.txt
src/zed_ros_floor_detection/: CMakeLists.txt
src/zed_ros_floor_detection/src/: main.cpp
(+12 files in other folders)
