<?xml version="1.0"?>
<package format="2">
  <name>zed-ros-app</name>
  <version>3.0.0</version>
  <description>Floor Detection for Rviz and Remote Streaming!</description>

  <maintainer email="todo@todo.com">IW2.0</maintainer>
  <license>IW2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msg</depend>
  <depend>zed_interfaces</depend>

<exec_depend>zed_wrapper</exec_depend>
</package>